--- a/components/style.css
+++ b/components/style.css
@@ -1,5 +1,5 @@
 .logo {
-  height: 20%;
+  height: 100px;
 }
 
 html {
@@ -34,4 +34,11 @@ html {
   background-color: purple;
   color: white;
   font-weight: bold;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  jusify-content: center;
 }
