--- a/components/style.css
+++ b/components/style.css
@@ -24,10 +24,12 @@ html {
   align-items: center;
   justify-content: center;
   background-color: rgba(255, 255, 255, 0.7);
-  height: 100px;
+  height: 80px;
   width: 1fr;
   font-family: sans-serif;
   font-size: 16px;
+  padding-right: 4px;
+  padding-left: 4px;
 }
 
 .active {
